--- a/.github/workflows/demo-python-workflow.yml
+++ b/.github/workflows/demo-python-workflow.yml
@@ -1,5 +1,8 @@
 name: Demo Python Workflow
-on: [push]
+on: 
+    push:
+        paths:
+            - 'gitAction/python/**'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,6 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
+          cd ./gitAction/python
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Linting project with flake8
         run: |
@@ -26,4 +30,4 @@ jobs:
         run: |
           pip install pytest
           pip install pytest-cov
-          pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
