--- a/.github/workflows/demo-python-workflow.yml
+++ b/.github/workflows/demo-python-workflow.yml
@@ -29,5 +29,4 @@ jobs:
       - name: Testing the project using pytest
         run: |
           pip install pytest
-          pip install pytest-cov
-          pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          pytest
